Mon Aug  5 15:25:40 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkpixbuf-render.c (gdk_pixbuf_render_pixmap_and_mask_for_colormap): 
	Fix problem with wrong depth being used. (#89941, Jacob
	Berkman.) Remove an unneeded 'screen' variable.

Mon Aug  5 15:04:59 2002  Owen Taylor  <otaylor@redhat.com>

	More fixes for warnings reported by David L. Cooper II

	* gtk/gtkaccelmap.c (accel_map_parse_accel_path): Use
	GdkModifierType for accel_mods. (#85856)

	* gdk/gdkdisplay.h (struct _GdkDisplay): Make button_number
	signed, since we use -1 as an 'unset' value. (#85854)

	* gdk/x11/xsettings-client.c (parse_settings): Suppress
	a warning (#85853)

	* gdk/x11/gdkfont-x11.c (gdk_font_charset_for_locale): Fix
	accidental trailing ';'. (#85846)

Mon Aug  5 14:50:13 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkitemfactory.h: Add a note that yes, we do know
	what () means and we can't change it.

	Fixes for warnings reported by David L. Cooper II

	* tests/testtext.c: Warning fixes. Fix order of arguments
	to gtk_message_dialog_new(). (#85891)

	* gtk/gtktreeitem.c (gtk_tree_item_paint): Fix incorrect
	use GTK_STATE_INSENSITIVE for a shadow type. (Not clear
	what the drawing intent was, but it's ENABLE_BROKEN
	anyways.) (#85880)

	* gtk/gtktexttypes.c: Use character literals
	instead of direct constants to avoid warning. (#85878)

	* gtk/theme-bits/decompose-bits.c gtk/gtkstyle.c:
	Fix some signed/unsigned problems (#85876)

	* gtk/gtksignal.c (gtk_signal_newv): Add an explicit
	cast from GtkSignalRunType to GSignalFlags. (#85875)

	* gtk/gtkitemfactory.c (gtk_item_factory_add_item): Fix
	use of guint instead of GdkModifierType (#85871)

	* gtk/gtkimmulticontext.c (gtk_im_multicontext_append_menuitems): 
	Fix signed/unsigned problem (#85870)

	* gtk/gtkimcontext.c (gtk_im_context_class_init): Get
	rid of GtkType/Signal*. (Fixes #85869 as a side effect)

	* gtk/gtkdnd.c (gtk_drag_get_cursor): Fix some 
	signed/unsigned warnings (#85865)
